--- a/style.css
+++ b/style.css
@@ -4,5 +4,10 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-    color: grey;
+}
+
+#renderCanvas {
+    width: 100%;
+    height: 100%;
+    touch-action: none;
 }
